All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/Doc_Template_Details__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This is to define SFM Output Document template details.</description>
    <label>Doc Template Details</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Template Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>