All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>