All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template__c</fullName>
    <label>Doc Template</label>
    <referenceTo>Doc_Template__c</referenceTo>
    <relationshipLabel>Doc Template Details</relationshipLabel>
    <relationshipName>Doc_Template_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>