All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Doc_Template_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template_Detail_Id__c</fullName>
    <label>Doc Template Detail Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>