All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Doc_Template_Detail_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template_Detail_Unique_Id__c</fullName>
    <description>Used to identify the uniqueness of seeded data</description>
    <inlineHelpText>Used to identify the uniqueness of seeded data</inlineHelpText>
    <label>Doc Template Detail Unique Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>