All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>