All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Header_Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Header_Reference_Field__c</fullName>
    <label>Header Reference Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>