All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <label>SOQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>