All_Component_DX/force-app/main/default/objects/Doc_Template_Details__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Header_Object</fullName>
            </value>
            <value>
                <fullName>Detail_Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>